ventas - ocultar detalles para evitar errores

--- a/frontend/src/app/ventas/sell/sell-detail.component.html
+++ b/frontend/src/app/ventas/sell/sell-detail.component.html
@@ -5,38 +5,38 @@
         <h4>Detalles del Producto</h4>
         <form class="basic-form">
           <div fxLayout="row wrap">
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Código:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.codigo}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Código:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.codigo}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Nombre:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.nombre}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Nombre:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.nombre}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Descripción:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.descripcion}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Descripción:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.descripcion}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
             <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
               <!--<div fxLayout="column">-->
@@ -71,27 +71,27 @@
               <!--</div>-->
             <!--</div>-->
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Stock:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.stock}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Stock:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.stock}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Stock Mínimo:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.notificacionDeLimiteDeStock}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Stock Mínimo:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.notificacionDeLimiteDeStock}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
             <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
               <!--<div fxLayout="column">-->
@@ -104,42 +104,42 @@
               <!--</div>-->
             <!--</div>-->
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Unidad De Medida:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <span>{{entity.unidadDeMedida}}</span>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Unidad De Medida:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span>{{entity.unidadDeMedida}}</span>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Categoria:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <div *ngIf="entity.categoriaId">
-                  <span>{{entity.categoriaNombre}}</span>
-                </div>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Categoria:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<div *ngIf="entity.categoriaId">-->
+                  <!--<span>{{entity.categoriaNombre}}</span>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <div fxFlex.gt-xs="25" fxFlex="100">
-              <div fxLayout="column">
-                <span class="font-bold">Imagen:</span>
-              </div>
-            </div>
-            <div fxFlex.gt-xs="75" fxFlex="100">
-              <div fxLayout="column">
-                <div>
-                  <img [src]="'data:' + entity.imagenContentType + ';base64,' + entity.imagen" style="max-height: 100px;" *ngIf="entity.imagen" alt="entity image"/>
-                </div>
-              </div>
-            </div>
+            <!--<div fxFlex.gt-xs="25" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<span class="font-bold">Imagen:</span>-->
+              <!--</div>-->
+            <!--</div>-->
+            <!--<div fxFlex.gt-xs="75" fxFlex="100">-->
+              <!--<div fxLayout="column">-->
+                <!--<div>-->
+                  <!--<img [src]="'data:' + entity.imagenContentType + ';base64,' + entity.imagen" style="max-height: 100px;" *ngIf="entity.imagen" alt="entity image"/>-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
 
 
           </div>
