--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -6,12 +6,12 @@
         <span class="goBackTag">Todas las ventas</span>
       </div>
 
-      <div fxFlex.gt-xs="50" fxFlex="75" class="p-10 text-right">
+      <!--<div fxFlex.gt-xs="50" fxFlex="75" class="p-10 text-right">
         <div class="button-row">
           <button mat-raised-button style="background-color: #60c71f; color: white;" [disabled]="!form.valid" (click)="save()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Vender&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
           <button mat-raised-button (click)="previousState()">Cancelar</button>
         </div>
-      </div>
+      </div>-->
     </div>
   </div>
 </div>
@@ -39,14 +39,15 @@
           </mat-card>
         </div>
       </div>
-      <div>
-      </div>
+          <div id="foot-div" *ngIf="productos.length > 0">
+              <div id="foot">productos encontrados {{productos.length}} unid</div>
+          </div> 
     </mat-card-content>
   </mat-card>
 
   <mat-card fxFlex.gt-lg="47" fxFlex.gt-md="47" fxFlex.gt-sm="47" fxFlex="100">
     <mat-card-content>
-      <mat-card-title>{{!entity.id ? 'Nueva' : 'Edición'}} Venta</mat-card-title>
+
       <form class="basic-form">
         <div fxLayout="row wrap">
           <div class="responsive-table">
@@ -109,5 +110,15 @@
         </div>
       </div>
     </mat-card-content>
+    <div class="button-row">
+        <button mat-raised-button style="background-color: #1ab394; color: white; border-radius: initial; width:75%" [disabled]="!form.valid" (click)="save()">Vender</button>
+        <button mat-raised-button style="width:136px; border-radius: initial;"(click)="previousState()">Cancelar</button>
+      </div>
   </mat-card>
+  <!--<div fxFlex.gt-xs="50" fxFlex="75" class="p-10 text-right">
+      <div class="button-row">
+        <button mat-raised-button style="background-color: #60c71f; color: white;" [disabled]="!form.valid" (click)="save()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Vender&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
+        <button mat-raised-button (click)="previousState()">Cancelar</button>
+      </div>
+  </div>-->
 </div>
