--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -59,5 +59,10 @@ margin-top: 6px;
 }
 
 .p-10{
-  justify-content: flex-end;
+  display: inline-flex;
+}
+
+.mat-card-content > :last-child:not(.mat-card-footer), .mat-card > :last-child:not(.mat-card-footer){
+  margin-bottom: 0;
+  margin-top: -15px;
 }
