--- a/frontend/src/app/ventas/sell/sell.component.html
+++ b/frontend/src/app/ventas/sell/sell.component.html
@@ -73,7 +73,7 @@
               <mat-header-cell *matHeaderCellDef> Estado </mat-header-cell>
               <mat-cell *matCellDef="let element">
                 <span class="header-label">Estado:</span>
-                <span [ngStyle]="{'color': element.estatus ? 'yellow' : 'green'}">{{element.estatus}}</span>
+                <span [ngStyle]="{'color': element.estatus === 'PENDIENTE' ? 'yellow' : 'green'}">{{element.estatus}}</span>
               </mat-cell>
             </ng-container>
 
