--- a/frontend/src/assets/styles/header.scss
+++ b/frontend/src/assets/styles/header.scss
@@ -13,7 +13,8 @@ mat-toolbar{
     box-shadow: 1px 0px 10px rgba(0, 0, 0, 0.5);
     
     &.topbar{
-        padding: 0px 15px;
+        padding: 0px 5px;
+        height: 45px;
     }
     .navbar-header {
         
