--- a/frontend/src/app/ventas/sell/sell.component.html
+++ b/frontend/src/app/ventas/sell/sell.component.html
@@ -14,7 +14,7 @@
             </mat-form-field>
             
             <div fxFlex.gt-sm="35" fxFlex="35" id="newSection">
-              <button mat-raised-button color="primary" [routerLink]="['/ventas/sell/new']">Nueva Venta</button>
+              <button mat-raised-button color="primary" [routerLink]="['/ventas/sell']">Nueva Venta</button>
             </div>
           </div>
 
