--- a/frontend/src/app/ventas/sell/sell-extra-info.component.html
+++ b/frontend/src/app/ventas/sell/sell-extra-info.component.html
@@ -38,7 +38,7 @@
 
     <div fxFlex.gt-sm="40" fxFlex="100" class="p-10">
       <mat-form-field>
-        <input matInput placeholder="Dni o Ruc" name="Dni o Ruc" type="text" maxlength="150" [(ngModel)]="amortization.codigoDocumento">
+        <input matInput placeholder="Dni o Ruc" name="Dni o Ruc" type="text" maxlength="11" (keypress)="checkNumbersOnly($event)" [(ngModel)]="amortization.codigoDocumento">
       </mat-form-field>
     </div>
 
